Avoid wrapping section names below timestamps.

--- a/src/style.css
+++ b/src/style.css
@@ -56,7 +56,9 @@ input {
 }
 
 a.timestamp-link {
-  display: block;
+  display: grid;
+  grid-template-columns: auto 1fr;
+  gap: 0.5em;
 
   font-size: 1em;
   padding: 0.2em 0.5em;
